--- a/index.html
+++ b/index.html
@@ -1,59 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="scss/styles.css">
+  <script src="script.js" defer></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500;600;700&display=swap" rel="stylesheet">
+
   <title>Frontend Mentor | Room homepage</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
-  Home
-  Shop
-  About
-  Contact
+  <header class="header">
+    <nav>
+      <div class="header__nav">
+        <img class="header__hamburger" src="images/icon-hamburger.svg" alt="">
+        <img class="logo" src="images/logo.svg" alt="">
+      </div>
+      <ul class="nav-links">
+        <img class="close" src="images/icon-close.svg" alt="">
+        <li>home</li>
+        <li>shop</li>
+        <li>about</li>
+        <li>contact</li>
+      </ul>
+    </nav>
+    <div class="header__slider">
+      <img data-slider="left" src="images/icon-angle-left.svg" alt="">
+      <img data-slider="right" src="images/icon-angle-right.svg" alt="">
+    </div>
+  </header>
+  <main>
+    <section>
+      <div class="card card--top">
+        <h1 class="card__title">Discover innovative ways to decorate</h1>
+        <p class="card__copy">We provide unmatched quality, comfort, and style for property owners across the country.
+          Our
+          experts combine form and function in bringing your vision to life. Create a room in your own style with our
+          collection and make your property a reflection of you and what you love.</p>
+      </div>
+    </section>
+    <section class="section">
+      <img class="section__image section__image--dark" src="images/image-about-dark.jpg" alt="">
+      <div class="card card--btm">
+        <h2 class="card__header">ABOUT OUR FURNITURE</h2>
+        <p class="card__copy">Our multifunctional collection blends design and function to suit your individual taste.
+          Make each room unique, or pick a cohesive theme that best express your interests and what inspires you. Find
+          the furniture pieces you need, from traditional to contemporary styles or anything in between. Product
+          specialists are available to help you create your dream space. </p>
+      </div>
+      <img class="section__image" src="images/image-about-light.jpg" alt="">
+    </section>
+  </main>
 
-  Discover innovative ways to decorate
 
-  We provide unmatched quality, comfort, and style for property owners across the country. 
-  Our experts combine form and function in bringing your vision to life. Create a room in your 
-  own style with our collection and make your property a reflection of you and what you love.
-
-  Shop now
-
-  We are available all across the globe
-
-  With stores all over the world, it's easy for you to find furniture for your home or place of business. 
-  Locally, we’re in most major cities throughout the country. Find the branch nearest you using our 
-  store locator. Any questions? Don't hesitate to contact us today.
-
-  Shop now
-
-  Manufactured with the best materials
-
-  Our modern furniture store provide a high level of quality. Our company has invested in advanced technology 
-  to ensure that every product is made as perfect and as consistent as possible. With three decades of 
-  experience in this industry, we understand what customers want for their home and office.
-
-  Shop now
-
-  About our furniture
-
-  Our multifunctional collection blends design and function to suit your individual taste.
-  Make each room unique, or pick a cohesive theme that best express your interests and what
-  inspires you. Find the furniture pieces you need, from traditional to contemporary styles
-  or anything in between. Product specialists are available to help you create your dream space.
-  
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Kenneth Chang</a>.
   </div>
 </body>
+
 </html>
